# CodeDaddy

./: README.md  call_function.py  chat_history.json  main.py  prompts.py  pyproject.toml  test_get_file_content.py  test_get_files_info.py  test_run_python_file.py  test_write.py
.github/: copilot-instructions.md
agent/: call_function.py  config.py  tools.py
code-agent-refactored/: .env.example  .gitignore  README.md  main.py  pyproject.toml
code-agent-refactored/agent/: config.py
code-agent-refactored/functions/: _pathguard.py  get_file_content.py
functions/: get_file_content.py  get_files_info.py  run_python_file.py  write_file.py
workspace/: main.py  random.txt  tests.py
